src/compiler/semantic/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     empty -> <empty>
Rule 2     new_scope -> <empty>
Rule 3     pop_scope -> <empty>
Rule 4     PROGRAM -> new_scope STATEMENT
Rule 5     PROGRAM -> new_scope FUNCLIST
Rule 6     PROGRAM -> empty
Rule 7     FUNCLIST -> FUNCDEF FUNCLISTAUX
Rule 8     FUNCLISTAUX -> FUNCLIST
Rule 9     FUNCLISTAUX -> empty
Rule 10    FUNCDEF -> DEF IDENT new_scope LPAREN PARAMLIST RPAREN LBRACKETS STATELIST RBRACKETS
Rule 11    PARAMLIST -> DATATYPE IDENT PARAMLISTAUX
Rule 12    PARAMLIST -> empty
Rule 13    PARAMLISTAUX -> COMMA PARAMLIST
Rule 14    PARAMLISTAUX -> empty
Rule 15    DATATYPE -> INT_KEYWORD
Rule 16    DATATYPE -> FLOAT_KEYWORD
Rule 17    DATATYPE -> STRING_KEYWORD
Rule 18    STATEMENT -> VARDECL SEMICOLON
Rule 19    STATEMENT -> ATRIBSTAT SEMICOLON
Rule 20    STATEMENT -> PRINTSTAT SEMICOLON
Rule 21    STATEMENT -> READSTAT SEMICOLON
Rule 22    STATEMENT -> RETURNSTAT SEMICOLON
Rule 23    STATEMENT -> IFSTAT
Rule 24    STATEMENT -> FORSTAT
Rule 25    STATEMENT -> new_scope LBRACKETS STATELIST RBRACKETS
Rule 26    STATEMENT -> BREAK SEMICOLON
Rule 27    STATEMENT -> SEMICOLON
Rule 28    VARDECL -> DATATYPE IDENT OPT_VECTOR
Rule 29    OPT_VECTOR -> LSQBRACKETS INT_CONSTANT RSQBRACKETS OPT_VECTOR
Rule 30    OPT_VECTOR -> empty
Rule 31    ATRIBSTAT -> LVALUE ATTRIBUTION ATRIB_RIGHT
Rule 32    ATRIB_RIGHT -> FUNCCALL_OR_EXPRESSION
Rule 33    ATRIB_RIGHT -> ALLOCEXPRESSION
Rule 34    FUNCCALL_OR_EXPRESSION -> PLUS FACTOR REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 35    FUNCCALL_OR_EXPRESSION -> MINUS FACTOR REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 36    FUNCCALL_OR_EXPRESSION -> INT_CONSTANT REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 37    FUNCCALL_OR_EXPRESSION -> FLOAT_CONSTANT REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 38    FUNCCALL_OR_EXPRESSION -> STRING_CONSTANT REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 39    FUNCCALL_OR_EXPRESSION -> NULL REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 40    FUNCCALL_OR_EXPRESSION -> LPAREN NUMEXPRESSION RPAREN REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 41    FUNCCALL_OR_EXPRESSION -> IDENT FOLLOW_IDENT
Rule 42    FOLLOW_IDENT -> OPT_ALLOC_NUMEXP REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 43    FOLLOW_IDENT -> LPAREN PARAMLISTCALL RPAREN
Rule 44    FUNCCALL -> IDENT LPAREN PARAMLISTCALL RPAREN
Rule 45    PARAMLISTCALL -> IDENT PARAMLISTCALLAUX
Rule 46    PARAMLISTCALL -> empty
Rule 47    PARAMLISTCALLAUX -> COMMA PARAMLISTCALL
Rule 48    PARAMLISTCALLAUX -> empty
Rule 49    PRINTSTAT -> PRINT EXPRESSION
Rule 50    READSTAT -> READ LVALUE
Rule 51    RETURNSTAT -> RETURN
Rule 52    IFSTAT -> IF LPAREN EXPRESSION RPAREN new_scope LBRACKETS STATELIST RBRACKETS OPT_ELSE
Rule 53    OPT_ELSE -> ELSE new_scope LBRACKETS STATELIST RBRACKETS
Rule 54    OPT_ELSE -> empty
Rule 55    FORSTAT -> FOR LPAREN ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPAREN STATEMENT
Rule 56    STATELIST -> STATEMENT OPT_STATELIST
Rule 57    OPT_STATELIST -> STATELIST
Rule 58    OPT_STATELIST -> empty
Rule 59    ALLOCEXPRESSION -> NEW DATATYPE LSQBRACKETS NUMEXPRESSION RSQBRACKETS OPT_ALLOC_NUMEXP
Rule 60    OPT_ALLOC_NUMEXP -> LSQBRACKETS NUMEXPRESSION RSQBRACKETS OPT_ALLOC_NUMEXP
Rule 61    OPT_ALLOC_NUMEXP -> empty
Rule 62    EXPRESSION -> NUMEXPRESSION OPT_REL_OP_NUM_EXPR
Rule 63    OPT_REL_OP_NUM_EXPR -> REL_OP NUMEXPRESSION
Rule 64    OPT_REL_OP_NUM_EXPR -> empty
Rule 65    REL_OP -> LOWER_THAN
Rule 66    REL_OP -> GREATER_THAN
Rule 67    REL_OP -> LOWER_OR_EQUALS_THAN
Rule 68    REL_OP -> GREATER_OR_EQUALS_THAN
Rule 69    REL_OP -> EQ_COMPARISON
Rule 70    REL_OP -> NEQ_COMPARISON
Rule 71    NUMEXPRESSION -> TERM REC_PLUS_MINUS_TERM
Rule 72    REC_PLUS_MINUS_TERM -> PLUS_OR_MINUS TERM REC_PLUS_MINUS_TERM
Rule 73    REC_PLUS_MINUS_TERM -> empty
Rule 74    PLUS_OR_MINUS -> PLUS
Rule 75    PLUS_OR_MINUS -> MINUS
Rule 76    TERM -> UNARYEXPR REC_UNARYEXPR
Rule 77    REC_UNARYEXPR -> UNARYEXPR_OP TERM
Rule 78    REC_UNARYEXPR -> empty
Rule 79    UNARYEXPR_OP -> TIMES
Rule 80    UNARYEXPR_OP -> DIVIDE
Rule 81    UNARYEXPR_OP -> MODULE
Rule 82    UNARYEXPR -> PLUS_OR_MINUS FACTOR
Rule 83    UNARYEXPR -> FACTOR
Rule 84    FACTOR -> INT_CONSTANT
Rule 85    FACTOR -> FLOAT_CONSTANT
Rule 86    FACTOR -> STRING_CONSTANT
Rule 87    FACTOR -> NULL
Rule 88    FACTOR -> LVALUE
Rule 89    FACTOR -> LPAREN NUMEXPRESSION RPAREN
Rule 90    LVALUE -> IDENT OPT_ALLOC_NUMEXP

Terminals, with rules where they appear

ATTRIBUTION          : 31
BREAK                : 26
COMMA                : 13 47
DEF                  : 10
DIVIDE               : 80
ELSE                 : 53
EQ_COMPARISON        : 69
FLOAT_CONSTANT       : 37 85
FLOAT_KEYWORD        : 16
FOR                  : 55
GREATER_OR_EQUALS_THAN : 68
GREATER_THAN         : 66
IDENT                : 10 11 28 41 44 45 90
IF                   : 52
INT_CONSTANT         : 29 36 84
INT_KEYWORD          : 15
LBRACKETS            : 10 25 52 53
LOWER_OR_EQUALS_THAN : 67
LOWER_THAN           : 65
LPAREN               : 10 40 43 44 52 55 89
LSQBRACKETS          : 29 59 60
MINUS                : 35 75
MODULE               : 81
NEQ_COMPARISON       : 70
NEW                  : 59
NULL                 : 39 87
PLUS                 : 34 74
PRINT                : 49
RBRACKETS            : 10 25 52 53
READ                 : 50
RETURN               : 51
RPAREN               : 10 40 43 44 52 55 89
RSQBRACKETS          : 29 59 60
SEMICOLON            : 18 19 20 21 22 26 27 55 55
STRING_CONSTANT      : 38 86
STRING_KEYWORD       : 17
TIMES                : 79
error                : 

Nonterminals, with rules where they appear

ALLOCEXPRESSION      : 33
ATRIBSTAT            : 19 55 55
ATRIB_RIGHT          : 31
DATATYPE             : 11 28 59
EXPRESSION           : 49 52 55
FACTOR               : 34 35 82 83
FOLLOW_IDENT         : 41
FORSTAT              : 24
FUNCCALL             : 
FUNCCALL_OR_EXPRESSION : 32
FUNCDEF              : 7
FUNCLIST             : 5 8
FUNCLISTAUX          : 7
IFSTAT               : 23
LVALUE               : 31 50 88
NUMEXPRESSION        : 40 59 60 62 63 89
OPT_ALLOC_NUMEXP     : 42 59 60 90
OPT_ELSE             : 52
OPT_REL_OP_NUM_EXPR  : 34 35 36 37 38 39 40 42 62
OPT_STATELIST        : 56
OPT_VECTOR           : 28 29
PARAMLIST            : 10 13
PARAMLISTAUX         : 11
PARAMLISTCALL        : 43 44 47
PARAMLISTCALLAUX     : 45
PLUS_OR_MINUS        : 72 82
PRINTSTAT            : 20
PROGRAM              : 0
READSTAT             : 21
REC_PLUS_MINUS_TERM  : 34 35 36 37 38 39 40 42 71 72
REC_UNARYEXPR        : 34 35 36 37 38 39 40 42 76
REL_OP               : 63
RETURNSTAT           : 22
STATELIST            : 10 25 52 53 57
STATEMENT            : 4 55 56
TERM                 : 71 72 77
UNARYEXPR            : 76
UNARYEXPR_OP         : 77
VARDECL              : 18
empty                : 6 9 12 14 30 46 48 54 58 61 64 73 78
new_scope            : 4 5 10 25 52 53
pop_scope            : 

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (4) PROGRAM -> . new_scope STATEMENT
    (5) PROGRAM -> . new_scope FUNCLIST
    (6) PROGRAM -> . empty
    (2) new_scope -> .
    (1) empty -> .

    BREAK           reduce using rule 2 (new_scope -> .)
    SEMICOLON       reduce using rule 2 (new_scope -> .)
    PRINT           reduce using rule 2 (new_scope -> .)
    READ            reduce using rule 2 (new_scope -> .)
    RETURN          reduce using rule 2 (new_scope -> .)
    IF              reduce using rule 2 (new_scope -> .)
    FOR             reduce using rule 2 (new_scope -> .)
    DEF             reduce using rule 2 (new_scope -> .)
    INT_KEYWORD     reduce using rule 2 (new_scope -> .)
    FLOAT_KEYWORD   reduce using rule 2 (new_scope -> .)
    STRING_KEYWORD  reduce using rule 2 (new_scope -> .)
    IDENT           reduce using rule 2 (new_scope -> .)
    LBRACKETS       reduce using rule 2 (new_scope -> .)
    $end            reduce using rule 1 (empty -> .)

    PROGRAM                        shift and go to state 1
    new_scope                      shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> PROGRAM .



state 2

    (4) PROGRAM -> new_scope . STATEMENT
    (5) PROGRAM -> new_scope . FUNCLIST
    (18) STATEMENT -> . VARDECL SEMICOLON
    (19) STATEMENT -> . ATRIBSTAT SEMICOLON
    (20) STATEMENT -> . PRINTSTAT SEMICOLON
    (21) STATEMENT -> . READSTAT SEMICOLON
    (22) STATEMENT -> . RETURNSTAT SEMICOLON
    (23) STATEMENT -> . IFSTAT
    (24) STATEMENT -> . FORSTAT
    (25) STATEMENT -> . new_scope LBRACKETS STATELIST RBRACKETS
    (26) STATEMENT -> . BREAK SEMICOLON
    (27) STATEMENT -> . SEMICOLON
    (7) FUNCLIST -> . FUNCDEF FUNCLISTAUX
    (28) VARDECL -> . DATATYPE IDENT OPT_VECTOR
    (31) ATRIBSTAT -> . LVALUE ATTRIBUTION ATRIB_RIGHT
    (49) PRINTSTAT -> . PRINT EXPRESSION
    (50) READSTAT -> . READ LVALUE
    (51) RETURNSTAT -> . RETURN
    (52) IFSTAT -> . IF LPAREN EXPRESSION RPAREN new_scope LBRACKETS STATELIST RBRACKETS OPT_ELSE
    (55) FORSTAT -> . FOR LPAREN ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPAREN STATEMENT
    (2) new_scope -> .
    (10) FUNCDEF -> . DEF IDENT new_scope LPAREN PARAMLIST RPAREN LBRACKETS STATELIST RBRACKETS
    (15) DATATYPE -> . INT_KEYWORD
    (16) DATATYPE -> . FLOAT_KEYWORD
    (17) DATATYPE -> . STRING_KEYWORD
    (90) LVALUE -> . IDENT OPT_ALLOC_NUMEXP

    BREAK           shift and go to state 15
    SEMICOLON       shift and go to state 8
    PRINT           shift and go to state 20
    READ            shift and go to state 21
    RETURN          shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    LBRACKETS       reduce using rule 2 (new_scope -> .)
    DEF             shift and go to state 25
    INT_KEYWORD     shift and go to state 26
    FLOAT_KEYWORD   shift and go to state 27
    STRING_KEYWORD  shift and go to state 28
    IDENT           shift and go to state 18

    new_scope                      shift and go to state 4
    STATEMENT                      shift and go to state 5
    FUNCLIST                       shift and go to state 6
    VARDECL                        shift and go to state 7
    ATRIBSTAT                      shift and go to state 9
    PRINTSTAT                      shift and go to state 10
    READSTAT                       shift and go to state 11
    RETURNSTAT                     shift and go to state 12
    IFSTAT                         shift and go to state 13
    FORSTAT                        shift and go to state 14
    FUNCDEF                        shift and go to state 16
    DATATYPE                       shift and go to state 17
    LVALUE                         shift and go to state 19

state 3

    (6) PROGRAM -> empty .

    $end            reduce using rule 6 (PROGRAM -> empty .)


state 4

    (25) STATEMENT -> new_scope . LBRACKETS STATELIST RBRACKETS

    LBRACKETS       shift and go to state 29


state 5

    (4) PROGRAM -> new_scope STATEMENT .

    $end            reduce using rule 4 (PROGRAM -> new_scope STATEMENT .)


state 6

    (5) PROGRAM -> new_scope FUNCLIST .

    $end            reduce using rule 5 (PROGRAM -> new_scope FUNCLIST .)


state 7

    (18) STATEMENT -> VARDECL . SEMICOLON

    SEMICOLON       shift and go to state 30


state 8

    (27) STATEMENT -> SEMICOLON .

    $end            reduce using rule 27 (STATEMENT -> SEMICOLON .)
    BREAK           reduce using rule 27 (STATEMENT -> SEMICOLON .)
    SEMICOLON       reduce using rule 27 (STATEMENT -> SEMICOLON .)
    PRINT           reduce using rule 27 (STATEMENT -> SEMICOLON .)
    READ            reduce using rule 27 (STATEMENT -> SEMICOLON .)
    RETURN          reduce using rule 27 (STATEMENT -> SEMICOLON .)
    IF              reduce using rule 27 (STATEMENT -> SEMICOLON .)
    FOR             reduce using rule 27 (STATEMENT -> SEMICOLON .)
    INT_KEYWORD     reduce using rule 27 (STATEMENT -> SEMICOLON .)
    FLOAT_KEYWORD   reduce using rule 27 (STATEMENT -> SEMICOLON .)
    STRING_KEYWORD  reduce using rule 27 (STATEMENT -> SEMICOLON .)
    IDENT           reduce using rule 27 (STATEMENT -> SEMICOLON .)
    LBRACKETS       reduce using rule 27 (STATEMENT -> SEMICOLON .)
    RBRACKETS       reduce using rule 27 (STATEMENT -> SEMICOLON .)


state 9

    (19) STATEMENT -> ATRIBSTAT . SEMICOLON

    SEMICOLON       shift and go to state 31


state 10

    (20) STATEMENT -> PRINTSTAT . SEMICOLON

    SEMICOLON       shift and go to state 32


state 11

    (21) STATEMENT -> READSTAT . SEMICOLON

    SEMICOLON       shift and go to state 33


state 12

    (22) STATEMENT -> RETURNSTAT . SEMICOLON

    SEMICOLON       shift and go to state 34


state 13

    (23) STATEMENT -> IFSTAT .

    $end            reduce using rule 23 (STATEMENT -> IFSTAT .)
    BREAK           reduce using rule 23 (STATEMENT -> IFSTAT .)
    SEMICOLON       reduce using rule 23 (STATEMENT -> IFSTAT .)
    PRINT           reduce using rule 23 (STATEMENT -> IFSTAT .)
    READ            reduce using rule 23 (STATEMENT -> IFSTAT .)
    RETURN          reduce using rule 23 (STATEMENT -> IFSTAT .)
    IF              reduce using rule 23 (STATEMENT -> IFSTAT .)
    FOR             reduce using rule 23 (STATEMENT -> IFSTAT .)
    INT_KEYWORD     reduce using rule 23 (STATEMENT -> IFSTAT .)
    FLOAT_KEYWORD   reduce using rule 23 (STATEMENT -> IFSTAT .)
    STRING_KEYWORD  reduce using rule 23 (STATEMENT -> IFSTAT .)
    IDENT           reduce using rule 23 (STATEMENT -> IFSTAT .)
    LBRACKETS       reduce using rule 23 (STATEMENT -> IFSTAT .)
    RBRACKETS       reduce using rule 23 (STATEMENT -> IFSTAT .)


state 14

    (24) STATEMENT -> FORSTAT .

    $end            reduce using rule 24 (STATEMENT -> FORSTAT .)
    BREAK           reduce using rule 24 (STATEMENT -> FORSTAT .)
    SEMICOLON       reduce using rule 24 (STATEMENT -> FORSTAT .)
    PRINT           reduce using rule 24 (STATEMENT -> FORSTAT .)
    READ            reduce using rule 24 (STATEMENT -> FORSTAT .)
    RETURN          reduce using rule 24 (STATEMENT -> FORSTAT .)
    IF              reduce using rule 24 (STATEMENT -> FORSTAT .)
    FOR             reduce using rule 24 (STATEMENT -> FORSTAT .)
    INT_KEYWORD     reduce using rule 24 (STATEMENT -> FORSTAT .)
    FLOAT_KEYWORD   reduce using rule 24 (STATEMENT -> FORSTAT .)
    STRING_KEYWORD  reduce using rule 24 (STATEMENT -> FORSTAT .)
    IDENT           reduce using rule 24 (STATEMENT -> FORSTAT .)
    LBRACKETS       reduce using rule 24 (STATEMENT -> FORSTAT .)
    RBRACKETS       reduce using rule 24 (STATEMENT -> FORSTAT .)


state 15

    (26) STATEMENT -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 35


state 16

    (7) FUNCLIST -> FUNCDEF . FUNCLISTAUX
    (8) FUNCLISTAUX -> . FUNCLIST
    (9) FUNCLISTAUX -> . empty
    (7) FUNCLIST -> . FUNCDEF FUNCLISTAUX
    (1) empty -> .
    (10) FUNCDEF -> . DEF IDENT new_scope LPAREN PARAMLIST RPAREN LBRACKETS STATELIST RBRACKETS

    $end            reduce using rule 1 (empty -> .)
    DEF             shift and go to state 25

    FUNCDEF                        shift and go to state 16
    FUNCLISTAUX                    shift and go to state 36
    FUNCLIST                       shift and go to state 37
    empty                          shift and go to state 38

state 17

    (28) VARDECL -> DATATYPE . IDENT OPT_VECTOR

    IDENT           shift and go to state 39


state 18

    (90) LVALUE -> IDENT . OPT_ALLOC_NUMEXP
    (60) OPT_ALLOC_NUMEXP -> . LSQBRACKETS NUMEXPRESSION RSQBRACKETS OPT_ALLOC_NUMEXP
    (61) OPT_ALLOC_NUMEXP -> . empty
    (1) empty -> .
